--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "tinker_cookbook"
 version = "0.1.0"
 description = "Implementations of post-training algorithms using the Tinker API"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "chz",
     "datasets",
@@ -13,6 +13,7 @@ dependencies = [
     "tinker",
     "torch",
     "transformers",
+    "blobfile",
 ]
 
 [project.optional-dependencies]
