--- a/.github/workflows/pyright.yaml
+++ b/.github/workflows/pyright.yaml
@@ -19,7 +19,7 @@ jobs:
           enable-cache: true
 
       - name: venv
-        run: uv venv && uv sync --extra dev --extra envs --extra vector-search --extra wandb
+        run: uv venv && uv sync --extra dev --extra vector-search --extra wandb
 
       - name: pyright
         run: uv run pyright
