--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ verifiers = [
     "verifiers",
     "openai",
 ]
+all = [
+    "tinker_cookbook[dev,vector-search,wandb,neptune-scale,trackio,verifiers]",
+]
 
 [build-system]
 requires = ["hatchling"]
