add gepa readme + remove comments and fix aime task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,12 +56,17 @@ verifiers = [
     "verifiers",
     "openai",
 ]
+gepa = [
+    "gepa",
+    "datasets",
+]
 all = [
     "tinker_cookbook[vector-search]",
     "tinker_cookbook[wandb]",
     "tinker_cookbook[neptune-scale]",
     "tinker_cookbook[trackio]",
     "tinker_cookbook[verifiers]",
+    "tinker_cookbook[gepa]",
 ]
 
 [build-system]
