--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "chz",
+    "cloudpickle",
     "datasets",
     "numpy",
+    "py_utils",
     "rich",
     "termcolor",
     "tinker>=0.6.1",
