ifBench eval setup if_rl recipe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,12 +63,19 @@ verifiers = [
     "verifiers>=0.1.8.post0",
     "openai",
 ]
+if_rl = [
+    "spacy>=3.8.11",
+    "emoji>=2.15.0",
+    "syllapy>=0.7.2",
+    "pip>=25.3",
+]
 all = [
     "tinker_cookbook[vector-search]",
     "tinker_cookbook[wandb]",
     "tinker_cookbook[neptune-scale]",
     "tinker_cookbook[trackio]",
     "tinker_cookbook[verifiers]",
+    "tinker_cookbook[if_rl]",
 ]
 
 [build-system]
