--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pytest>=9.0.2",
     "tiktoken>=0.12.0", # Required for Kimi tokenizer
     "tqdm",
+    "modal",
 ]
 
 [project.urls]
