Fix pyright type error in WandB step detection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,3 +84,8 @@ python_files = ["test_*.py", "*_test.py"]
 
 [tool.ruff]
 line-length = 100
+
+[dependency-groups]
+dev = [
+    "pyright>=1.1.408",
+]
