--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,7 @@ dependencies = [
     "pytest>=9.0.2",
     "tiktoken>=0.12.0", # Required for Kimi tokenizer
     "tqdm",
-    "modal>=1.3.1.dev6",
-    "matplotlib",
+    "modal",
     "wandb",
 ]
 
